[package]
name = "mvt"
version = "0.9.5"
description = "A library for encoding mapbox vector tiles"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/mvt"
repository = "https://github.com/DougLau/mvt"
readme = "README.md"
keywords = ["cartography", "gis", "vector", "tile", "mapbox"]
categories = ["encoding"]
edition = "2021"

[dependencies]
log = "0.4"
num-traits = "0.2"
pointy = "0.6"
protobuf = "~3.7"
protobuf-codegen = { version = "3.7", optional = true }
thiserror = "2"

[features]
update = ["protobuf-codegen"]

[[bin]]
# `cargo run --features=update` when updating to a new protobuf version
name = "mvt"
required-features = ["update"]
