[package]
name = "mvt"
version = "0.13.0"
description = "A library for encoding mapbox vector tiles"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/mvt"
repository = "https://github.com/DougLau/mvt"
readme = "README.md"
keywords = ["cartography", "gis", "vector", "tile", "mapbox"]
categories = ["encoding"]
edition = "2024"

[dependencies]
log = "0.4"
num-traits = "0.2"
pointy = "0.8"
prost = "0.14.3"
prost-build = { version = "0.14.3", optional = true }
thiserror = "2"

[features]
update = ["dep:prost-build"]

[[bin]]
# `cargo run --features=update` when updating to a new protobuf version
name = "mvt"
required-features = ["update"]
